replaced env epi slides

--- a/env_epi_slides.html
+++ b/env_epi_slides.html
@@ -13598,15 +13598,37 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="We-use-a-standardised-population">We use a standardised population<a class="anchor-link" href="#We-use-a-standardised-population">&#182;</a></h1><ul>
 <li>The WHO SEGI is a standard population</li>
-<li>You can make up any population that you think you can use
-| Age in years | Standard population count |
-|--------------|---------------------------|
-| &lt; 20         | 1000                      |
-| 20-39        | 1500                      |
-| 40-59        | 2500                      |
-| 60-79        | 1000                      |
-| &gt;= 80        |  500                      |</li>
+<li>You can make up any population that you think you can use</li>
 </ul>
+<table>
+<thead><tr>
+<th>Age in years</th>
+<th>Standard population count</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>&lt; 20</td>
+<td>1000</td>
+</tr>
+<tr>
+<td>20-39</td>
+<td>1500</td>
+</tr>
+<tr>
+<td>40-59</td>
+<td>2500</td>
+</tr>
+<tr>
+<td>60-79</td>
+<td>1000</td>
+</tr>
+<tr>
+<td>&gt;= 80</td>
+<td>500</td>
+</tr>
+</tbody>
+</table>
 
 </div>
 </div>
