changed again, added table

--- a/env_epi_slides.html
+++ b/env_epi_slides.html
@@ -13600,7 +13600,14 @@ a.anchor-link {
 <li>The WHO SEGI is a standard population</li>
 <li>You can make up any population that you think you can use</li>
 </ul>
-<table>
+
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="A-sample-standard-population">A sample standard population<a class="anchor-link" href="#A-sample-standard-population">&#182;</a></h1><table>
 <thead><tr>
 <th>Age in years</th>
 <th>Standard population count</th>
